# AI-Career-Copilot

./: .env.template  .gitignore  ROADMAP.md  pyproject.toml
src/generators/: __init__.py
src/matchers/: __init__.py
src/parsers/: __init__.py  job_parser.py  resume_parser.py
src/scrapers/: __init__.py
src/utils/: __init__.py
tests/: test_job_parser.py  test_resume_parser.py
